00_RNA_Empty_traditional/project/keil/.vscode/uv4.log
*** Using Compiler 'V6.12', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
Rebuild target 'my_project'
assembling startup_msp432p401r_uvision.s...
compiling adc.c...
compiling dma.c...
compiling key.c...
compiling system_msp432p401r.c...
compiling oled.c...
compiling PID.c...
compiling timA.c...
compiling servo.c...
../../hardware/HAL_I2C.c(203): error: conflicting types for 'I2C_Write'
void I2C_Write(uint32_t module, uint16_t txInt, uint8_t addr, uint8_t *buf, uint16_t size) {
     ^
../../hardware/inc\HAL_I2C.h(47): note: previous declaration is here
void I2C_Write(uint32_t module, uint16_t txInt, uint8_t addr, void *buf, uint16_t size);
     ^
../../hardware/HAL_I2C.c(229): error: conflicting types for 'I2C_Read'
void I2C_Read(uint32_t module, uint16_t txInt, uint8_t addr, uint8_t *buf, uint16_t size) {
     ^
../../hardware/inc\HAL_I2C.h(48): note: previous declaration is here
void I2C_Read(uint32_t module, uint16_t txInt, uint8_t addr, void *buf, uint16_t size);
     ^
2 errors generated.
compiling HAL_I2C.c...
compiling key4x4.c...
compiling tim32.c...
compiling led.c...
compiling main.c...
compiling driver_mpu6050_basic.c...
compiling driver_mpu6050_interface.c...
compiling driver_mpu6050_fifo.c...
compiling sysinit.c...
compiling driver_mpu6050_dmp.c...
compiling delay.c...
compiling baudrate_calculate.c...
compiling usart.c...
compiling driver_mpu6050.c...
".\Build\my_project_rom.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
